--- a/gradle.properties
+++ b/gradle.properties
@@ -1,21 +1,33 @@
+# Important Notes:
+# Every field you add must be added to the root build.gradle expandProps map.
+
 # Project
-version=9.1.1
-group=net.mc-s3.bno
+version=10.0.0
+group=net.mcs3.bno
+java_version=17
 
 # Common
-minecraft_version=1.20.1
-
-# Forge
-forge_version=47.0.35
-
-# Fabric
-fabric_version=0.84.0+1.20.1
-fabric_loader_version=0.14.21
-
-# Mod options
+minecraft_version=1.20.4
 mod_name=BasicNetherOres
 mod_author=cScotPlay
 mod_id=bno
+mod_license=MIT
+mod_credits=Thanks to An Sar for the help in working through this.  Thanks to McJty for putting together the tutorial videos that helped me to accomplish this.
+mod_description=Basic Nether Ores adds Overworld and Modded Ores to the Nether.
+minecraft_version_range=[1.20.4, 1.21)
+
+# Fabric
+fabric_api_version=0.97.1+1.20.4
+fabric_loader_version=0.15.11
+
+# Forge
+forge_version=49.1.0
+forge_loader_version_range=[49,)
+forge_version_range=[49,)
+
+# NeoForge
+neoforge_version=20.4.83-beta
+neoforge_loader_version=[2,)
 
 # Gradle
 org.gradle.jvmargs=-Xmx3G
@@ -23,5 +35,5 @@ org.gradle.daemon=false
 
 # Dependencies
 wthit_version=8.3.+
-modmenu_version=7.1.0
-jei_version=15.2.0.22
+modmenu_version=9.0.0
+jei_version=17.3.0.55
