--- a/common/build.gradle
+++ b/common/build.gradle
@@ -5,10 +5,29 @@ plugins {
 
 minecraft {
     version(minecraft_version)
-    var aw = file("src/main/resources/${mod_id}.accesswidener")
-    if(aw.exists()) accessWideners(aw)
+    def aw = file("src/main/resources/${mod_id}.accesswidener")
+    if(aw.exists()){
+        accessWideners(aw)
+    }
 }
 
 dependencies {
     compileOnly group:'org.spongepowered', name:'mixin', version:'0.8.5'
 }
+
+configurations {
+    commonJava {
+        canBeResolved = false
+        canBeConsumed = true
+    }
+    commonResources {
+        canBeResolved = false
+        canBeConsumed = true
+    }
+}
+
+artifacts {
+    commonJava sourceSets.main.java.sourceDirectories.singleFile
+    commonResources sourceSets.main.resources.sourceDirectories.singleFile
+}
+
