--- a/gradle.properties
+++ b/gradle.properties
@@ -2,38 +2,33 @@
 # Every field you add must be added to the root build.gradle expandProps map.
 
 # Project
-version=10.0.1
+version=9.6.0
 group=net.mcs3.bno
-java_version=17
+java_version=21
 
 # Common
-minecraft_version=1.20.4
+minecraft_version=1.20.6
 mod_name=BasicNetherOres
 mod_author=cScotPlay
 mod_id=bno
-mod_license=MIT
-mod_credits=Thanks to An Sar for the help in working through this.  Thanks to McJty for putting together the tutorial videos that helped me to accomplish this.
-mod_description=Basic Nether Ores adds Overworld and Modded Ores to the Nether.
-minecraft_version_range=[1.20.4, 1.21)
+license=MIT
+credits=Thanks to An Sar for the help in working through this.  Thanks to McJty for putting together the tutorial videos that helped me to accomplish this.
+description=Basic Nether Ores adds Overworld and Modded Ores to the Nether.
+minecraft_version_range=[1.20.6, 1.21)
+archive_name=BasicNetherOres
 
 # Fabric
-fabric_api_version=0.97.1+1.20.4
+fabric_version=0.99.0+1.20.6
 fabric_loader_version=0.15.11
 
-# Forge
-forge_version=49.1.0
-forge_loader_version_range=[49,)
-forge_version_range=[49,)
-
 # NeoForge
-neoforge_version=20.4.83-beta
-neoforge_loader_version=[2,)
+neoforge_version=20.6.72-beta
+neoforge_loader_version_range=[2,)
 
 # Gradle
 org.gradle.jvmargs=-Xmx3G
 org.gradle.daemon=false
 
 # Dependencies
-wthit_version=8.3.+
-modmenu_version=9.0.0
-jei_version=17.3.0.55
+modmenu_version=10.0.0-beta.1
+jei_version=18.0.0.62
