--- a/buildSrc/src/main/groovy/multiloader-common.gradle
+++ b/buildSrc/src/main/groovy/multiloader-common.gradle
@@ -1,64 +1,116 @@
 plugins {
     id 'java-library'
+    id 'maven-publish'
+}
+
+base {
+    archivesName = "${mod_id}-${project.name}-${minecraft_version}"
 }
 
 java {
-    toolchain.languageVersion = JavaLanguageVersion.of(17)
+    toolchain.languageVersion = JavaLanguageVersion.of(java_version)
     withSourcesJar()
     withJavadocJar()
 }
 
 repositories {
     mavenCentral()
-    maven { url 'https://repo.spongepowered.org/repository/maven-public/' }
+    // https://docs.gradle.org/current/userguide/declaring_repositories.html#declaring_content_exclusively_found_in_one_repository
+    exclusiveContent {
+        forRepository {
+            maven {
+                name = 'Sponge'
+                url = 'https://repo.spongepowered.org/repository/maven-public'
+            }
+        }
+        filter { includeGroupAndSubgroups("org.spongepowered") }
+    }
+    maven {
+        name = 'BlameJared'
+        url = 'https://maven.blamejared.com'
+    }
+    maven {
+        // location of a maven mirror for JEI files, as a fallback
+        name = "ModMaven"
+        url = "https://modmaven.dev"
+    }
     maven { url 'https://api.modrinth.com/maven' }
 }
 
-dependencies {
-    implementation 'org.jetbrains:annotations:24.1.0'
+// Declare capabilities on the outgoing configurations.
+// Read more about capabilities here: https://docs.gradle.org/current/userguide/component_capabilities.html#sec:declaring-additional-capabilities-for-a-local-component
+['apiElements', 'runtimeElements', 'sourcesElements', 'javadocElements'].each { variant ->
+    configurations."$variant".outgoing {
+        capability("$group:${base.archivesName.get()}:$version")
+        capability("$group:$mod_id-${project.name}-${minecraft_version}:$version")
+        capability("$group:$mod_id:$version")
+    }
+    publishing.publications.configureEach {
+        suppressPomMetadataWarningsFor(variant)
+    }
 }
 
-tasks.named('javadoc', Javadoc) {
-    options.addStringOption('Xdoclint:none', '-quiet')
+sourcesJar {
+    from(rootProject.file("LICENSE")) {
+        rename { "${it}_${mod_name}" }
+    }
 }
 
-tasks.withType(GenerateModuleMetadata).configureEach {
-    enabled = project.name == 'neoforge'
+jar {
+    from(rootProject.file("LICENSE")) {
+        rename { "${it}_${mod_name}" }
+    }
+
+    manifest {
+        attributes([
+                'Specification-Title'   : mod_name,
+                'Specification-Vendor'  : mod_author,
+                'Specification-Version' : project.jar.archiveVersion,
+                'Implementation-Title'  : project.name,
+                'Implementation-Version': project.jar.archiveVersion,
+                'Implementation-Vendor' : mod_author,
+                'Built-On-Minecraft'    : minecraft_version
+        ])
+    }
 }
 
 processResources {
-    var expandProps = [
-            // Project related Keys
+    def expandProps = [
             "version": version,
-            "group": project.group,
-
-            // Mod related Keys
+            "group": project.group, //Else we target the task's group.
             "minecraft_version": minecraft_version,
+            "minecraft_version_range": minecraft_version_range,
+            "fabric_version": fabric_version,
+            "fabric_loader_version": fabric_loader_version,
             "mod_name": mod_name,
             "mod_author": mod_author,
             "mod_id": mod_id,
-            "mod_license": mod_license,
-            "mod_credits": mod_credits,
-            "mod_description": mod_description,
-
-            // General Key
-            "minecraft_version_range": minecraft_version_range,
-
-            // Fabric Keys
-            "fabric_loader_version": fabric_loader_version,
-            "fabric_api_version": fabric_api_version,
-
-            // Forge Keys
-            "forge_version": forge_version,
-            "forge_version_range": forge_version_range,
-
-            // NeoForge Keys
+            "license": license,
+            "description": project.description,
             "neoforge_version": neoforge_version,
-            "neoforge_loader_version": neoforge_loader_version,
+            "neoforge_loader_version_range": neoforge_loader_version_range,
+            "credits": credits,
+            "java_version": java_version,
+            "modmenu_version": modmenu_version,
+            "jei_version": jei_version
     ]
 
-    filesMatching(['pack.mcmeta', 'fabric.mod.json', 'META-INF/mods.toml', '*.mixins.json']) {
+    filesMatching(['pack.mcmeta', 'fabric.mod.json', 'META-INF/mods.toml', 'META-INF/neoforge.mods.toml', '*.mixins.json']) {
         expand expandProps
     }
     inputs.properties(expandProps)
+}
+
+publishing {
+    publications {
+        register('mavenJava', MavenPublication) {
+            artifactId base.archivesName.get()
+            from components.java
+        }
+    }
+    repositories {
+        maven {
+            url System.getenv("local_maven_url")
+        }
+    }
 }
