--- a/buildSrc/src/main/groovy/multiloader-loader.gradle
+++ b/buildSrc/src/main/groovy/multiloader-loader.gradle
@@ -2,26 +2,43 @@ plugins {
     id 'multiloader-common'
 }
 
+configurations {
+    commonJava{
+        canBeResolved = true
+    }
+    commonResources{
+        canBeResolved = true
+    }
+}
+
 dependencies {
-    compileOnly(project(':common'))
+    compileOnly(project(':common')) {
+        capabilities {
+            requireCapability "$group:$mod_id"
+        }
+    }
+    commonJava project(path: ':common', configuration: 'commonJava')
+    commonResources project(path: ':common', configuration: 'commonResources')
 }
 
 tasks.named('compileJava', JavaCompile) {
-    it.options.encoding = 'UTF-8'
-    it.options.getRelease().set(17)
-    source(project(':common').sourceSets.main.allSource)
-}
-
-tasks.named('javadoc', Javadoc) {
-    source(project(":common").sourceSets.main.allJava)
-}
-
-tasks.named('sourcesJar', Jar) {
-    from project(':common').sourceSets.main.resources
-    from file('src/generated')
+    dependsOn(configurations.commonJava)
+    source(configurations.commonJava)
 }
 
 processResources {
-    from project(":common").sourceSets.main.resources
-    from file("src/generated")
+    dependsOn(configurations.commonResources)
+    from(configurations.commonResources)
+}
+
+tasks.named('javadoc', Javadoc).configure {
+    dependsOn(configurations.commonJava)
+    source(configurations.commonJava)
+}
+
+tasks.named("sourcesJar", Jar) {
+    dependsOn(configurations.commonJava)
+    from(configurations.commonJava)
+    dependsOn(configurations.commonResources)
+    from(configurations.commonResources)
 }
