--- a/fabric/build.gradle
+++ b/fabric/build.gradle
@@ -2,26 +2,10 @@ plugins {
     id 'multiloader-loader'
     id 'fabric-loom' version '1.6-SNAPSHOT'
 }
-
 base {
-    archivesName = "${mod_id}-fabric-${minecraft_version}"
+    archivesName = "${archive_name}-fabric-${minecraft_version}"
 }
-repositories{
-    maven {
-        name = "ModMenu"
-        url 'https://maven.terraformersmc.com/releases/' }
-
-    maven {
-        // location of the maven that hosts JEI files since January 2023
-        name = "Jared's maven"
-        url = "https://maven.blamejared.com/"
-    }
-    maven {
-        // location of a maven mirror for JEI files, as a fallback
-        name = "ModMaven"
-        url = "https://modmaven.dev"
-    }
-
+repositories {
     maven {
         url = "https://maven.modmuss50.me/"
     }
@@ -30,11 +14,8 @@ dependencies {
     minecraft "com.mojang:minecraft:${minecraft_version}"
     mappings loom.officialMojangMappings()
     modImplementation "net.fabricmc:fabric-loader:${fabric_loader_version}"
-    modApi "net.fabricmc.fabric-api:fabric-api:${fabric_api_version}"
+    modImplementation "net.fabricmc.fabric-api:fabric-api:${fabric_version}"
     implementation group: 'com.google.code.findbugs', name: 'jsr305', version: '3.0.1'
-
-    modCompileOnly "com.terraformersmc:modmenu:${project.modmenu_version}"
-    modRuntimeOnly "com.terraformersmc:modmenu:${project.modmenu_version}"
 
     // compile against the JEI API but do not include it at runtime
     modCompileOnlyApi("mezz.jei:jei-${minecraft_version}-common-api:${jei_version}")
@@ -42,24 +23,44 @@ dependencies {
     // at runtime, use the full JEI jar for Fabric
     modRuntimeOnly("mezz.jei:jei-${minecraft_version}-fabric:${jei_version}")
 
+    modRuntimeOnly "maven.modrinth:modmenu:${modmenu_version}"
+
     modImplementation "me.zeroeightsix:fiber:0.23.0-2"
     include "me.zeroeightsix:fiber:0.23.0-2"
 }
 
 loom {
-    var aw = project(":common").file("src/main/resources/${mod_id}.accesswidener")
-    if (aw.exists()) accessWidenerPath.set(aw)
-
+    def aw = project(":common").file("src/main/resources/${mod_id}.accesswidener")
+    if (aw.exists()) {
+        accessWidenerPath.set(aw)
+    }
     runs {
         client {
             client()
             setConfigName("Fabric Client")
             ideConfigGenerated(true)
-            programArgs('--username', 'Dev')
             runDir("runs/client")
+        }
+        server {
+            server()
+            setConfigName("Fabric Server")
+            ideConfigGenerated(true)
+            runDir("runs/server")
+        }
+        comdatagen {
+            client()
+            setConfigName("Common Datagen")
+            ideConfigGenerated(true)
+            vmArg("-Dbno.common_datagen=1")
+            vmArg "-Dfabric-api.datagen"
+            vmArg "-Dfabric-api.datagen.output-dir=${file("../common/src/generated")}"
+            vmArg "-Dfabric-api.datagen.modid=${mod_id}"
+
+            runDir "build/datagen"
         }
         datagen {
             inherit client
+            setConfigName("Fabric Datagen")
             name "Fabric Datagen"
             vmArg "-Dfabric-api.datagen"
             vmArg "-Dfabric-api.datagen.output-dir=${file("src/generated")}"
@@ -67,5 +68,8 @@ loom {
 
             runDir "build/datagen"
         }
+    }
+    processResources {
+        from project(":common").file('src/generated').getAbsolutePath()
     }
 }
