--- a/gradle.properties
+++ b/gradle.properties
@@ -45,10 +45,11 @@ mapping_version=1.20.6
 mod_id=bno
 # The human-readable display name for the mod.
 mod_name=Basic Nether ores
+archive_name=BasicNetherOres
 # The license of the mod. Review your options at https://choosealicense.com/. All Rights Reserved is the default.
 mod_license=MIT
 # The mod version. See https://semver.org/
-mod_version=11.0.0
+mod_version=9.6.0
 # The group ID for the mod. It is only important when publishing as an artifact to a Maven repository.
 # This should match the base package used for the mod sources.
 # See https://maven.apache.org/guides/mini/guide-naming-conventions.html
