--- a/gradle.properties
+++ b/gradle.properties
@@ -2,27 +2,32 @@
 # Every field you add must be added to the root build.gradle expandProps map.
 
 # Project
-version=9.6.0
+version=10.0.0
 group=net.mcs3.bno
 java_version=21
 
 # Common
-minecraft_version=1.20.6
+minecraft_version=1.21
 mod_name=BasicNetherOres
 mod_author=cScotPlay
 mod_id=bno
 license=MIT
 credits=Thanks to An Sar for the help in working through this.  Thanks to McJty for putting together the tutorial videos that helped me to accomplish this.
 description=Basic Nether Ores adds Overworld and Modded Ores to the Nether.
-minecraft_version_range=[1.20.6, 1.21)
+minecraft_version_range=[1.21]
 archive_name=BasicNetherOres
 
 # Fabric
-fabric_version=0.99.0+1.20.6
+fabric_version=0.100.3+1.21
 fabric_loader_version=0.15.11
 
+# Forge
+forge_version=51.0.13
+forge_loader_version_range=[51,)
+forge_version_range=[51,)
+
 # NeoForge
-neoforge_version=20.6.72-beta
+neoforge_version=21.0.14-beta
 neoforge_loader_version_range=[2,)
 
 # Gradle
@@ -30,5 +35,5 @@ org.gradle.jvmargs=-Xmx3G
 org.gradle.daemon=false
 
 # Dependencies
-modmenu_version=10.0.0-beta.1
-jei_version=18.0.0.62
+modmenu_version=11.0.0-rc.4
+jei_version=19.0.0.1
