--- a/settings.gradle
+++ b/settings.gradle
@@ -38,6 +38,7 @@ pluginManagement {
                 includeGroup("net.minecraftforge")
             }
         }
+        maven { url 'https://maven.minecraftforge.net/' }
     }
 }
 
@@ -46,7 +47,8 @@ plugins {
 }
 
 // This should match the folder name of the project, or else IDEA may complain (see https://youtrack.jetbrains.com/issue/IDEA-317606)
-rootProject.name = 'BNO_20.6'
+rootProject.name = 'BNO_21'
 include("common")
 include("fabric")
+include("forge")
 include("neoforge")
